# micrograd-rust

./: Cargo.toml
src/: engine.rs  main.rs  nn.rs
