[package]
name = "micrograd-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clonable = "0.9.0"
dyn-clone = "1.0.10"
graphviz-rust = "0.6.1"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

